fixed scrollbar

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -69,7 +69,7 @@
 .localWeather {
     background: #fff3;
     display: flex;
-    overflow-x: scroll;
+    // overflow-x: scroll;
     align-items: center;
     color: white;
     padding-top: 5px;
